--- a/app/views/orders/edit_order.erb
+++ b/app/views/orders/edit_order.erb
@@ -1,7 +1,15 @@
 <h1>Edit your Order:</h1>
 
 <form method="post" action="/order">
-        <input type="text" id="drink1" name="drink1" value="drink1"/>
-        <input type="text" id="drink2" name="drink2" value="drink2"/>
-        <input type="submit" id="drink3" name="drink3" value="drink3"/>
+  <ul><label>What drink type would you like?</label>
+        <li><input type="checkbox" id="latte" name="latte" value="Latte"/> Latte</li>
+        <li><input type="checkbox" id="cappuccino" name="cappuccino" value="Cappuccino"/> Cappuccino</li>
+        <li><input type="checkbox" id="hot coffee" name="hot coffee" value="Hot Coffee"/> Hot Coffee</li>
+        <li><input type="checkbox" id="iced coffee" name="iced coffee" value="Iced Coffee"/> Iced Coffee</li>
+        <li><input type="checkbox" id="frozen coffee" name="iced coffee" value="Frozen Coffee"/> Frozen Coffee</li>
+        <br>
+        <li>Any additional drink modifications (flavor, foam, etc)? <input type="text" id="mods" name="mods" value="mods"/></li>
+        <br>
+        <input type="submit" id="submit" name="submit" value="Update my Order!"/>
+  </ul>
 </form>
