--- a/app/views/orders/new_order.erb
+++ b/app/views/orders/new_order.erb
@@ -1,4 +1,4 @@
-<h1>Let us take your Order:</h1>
+<h1>Place your Order!</h1>
 
 <form method="post" action="/order">
   <ul><label>What drink type would you like?</label>
