--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,9 +1,9 @@
 <h1>Sign Up Here!</h1>
 
 <form method="post" action="/signup">
-  <input type="text" id="username" name="username" value="username"/>
-  <input type="text" id="email" name="email" value="email"/>
-  <input type="text" id="password" name="password" value="password"/>
+  <input type="text" id="username" name="username" value="username" required/>
+  <input type="text" id="email" name="email" value="email"required/>
+  <input type="text" id="password" name="password" value="password" required/>
   <br>
   <input type="submit" id="submit" name="submit" value="Sign Up!"/>
 </form>
