--- a/app/views/users/homepage.erb
+++ b/app/views/users/homepage.erb
@@ -1,1 +1,11 @@
-<h1>Welcome, <%=@user.name%></h1>
+<h1>Welcome, <%=@user.username%>!</h1>
+
+<br>
+
+<div>Your Current Order: </div>
+  <ul>
+
+
+
+  </ul>
+<h4>I would like to:</h4>
