--- a/app/views/orders/new_order.erb
+++ b/app/views/orders/new_order.erb
@@ -8,7 +8,10 @@
         <li><input type="checkbox" id="iced coffee" name="iced coffee" value="Iced Coffee"/> Iced Coffee</li>
         <li><input type="checkbox" id="frozen coffee" name="iced coffee" value="Frozen Coffee"/> Frozen Coffee</li>
         <br>
-        <li>Any additional drink modifications (flavor, foam, etc)? <input type="text" id="mods" name="mods" value="mods"/></li>
+        <p>Additional instructions for your drink? (flavor, foam, toppings)? <input type="text" id="mods" name="mods" value="mods"/></p>
+        <p>Would you like to favorite this order? </p>
+        <label for="yes">Yes </label><input type="radio" id="yes" name="yes" value="yes"> &nbsp; <label for="no">No </label><input type="radio" id="no" name="no" value="no">
+        <br>
         <br>
         <input type="submit" id="submit" name="submit" value="Place my Order!"/>
   </ul>
