--- a/app/views/orders/new_order.erb
+++ b/app/views/orders/new_order.erb
@@ -10,7 +10,7 @@
         <br>
         <p>Additional instructions for your drink? (flavor, foam, toppings)? <input type="text" id="mods" name="mods" value="mods"/></p>
         <p>Would you like to favorite this order? </p>
-        <label for="yes">Yes </label><input type="radio" id="yes" name="yes" value="yes"> &nbsp; <label for="no">No </label><input type="radio" id="no" name="no" value="no">
+        <label for="yes">Yes </label><input type="radio" id="yes" name="favorite" value="true"> &nbsp; <label for="no">No </label><input type="radio" id="no" name="favorite" value="false">
         <br>
         <br>
         <input type="submit" id="submit" name="submit" value="Place my Order!"/>
