--- a/app/views/orders/new_order.erb
+++ b/app/views/orders/new_order.erb
@@ -2,11 +2,9 @@
 
 <form method="post" action="/order">
   <ul><label>What drink type would you like?</label>
-        <li><input type="checkbox" id="latte" name="latte" value="Latte"/> Latte</li>
-        <li><input type="checkbox" id="cappuccino" name="cappuccino" value="Cappuccino"/> Cappuccino</li>
-        <li><input type="checkbox" id="hot coffee" name="hot coffee" value="Hot Coffee"/> Hot Coffee</li>
-        <li><input type="checkbox" id="iced coffee" name="iced coffee" value="Iced Coffee"/> Iced Coffee</li>
-        <li><input type="checkbox" id="frozen coffee" name="iced coffee" value="Frozen Coffee"/> Frozen Coffee</li>
+        <%@drinks.each do |drink|%>
+          <li><input type="checkbox" name="drinks[]" value="<%= drink.id %>"/> <%= drink.drink_type%></li>
+        <%end %>
         <br>
         <p>Additional instructions for your drink? (flavor, foam, toppings)? <input type="text" id="mods" name="mods" value="mods"/></p>
         <p>Would you like to favorite this order? </p>
