--- a/app/views/users/homepage.erb
+++ b/app/views/users/homepage.erb
@@ -15,5 +15,6 @@
 <ul>
   <li><a href="/orders/edit_order">Edit my Current Order</a></li>
   <li><a href="/orders/new_order">Start a new Order</a></li>
+  <li><a href="/orders/delete_order">Delete an Order</a></li>
   <li><a href="/users/logout">Log Out</a></li>
 </ul>
