--- a/app/views/orders/delete_order.erb
+++ b/app/views/orders/delete_order.erb
@@ -1,7 +1,1 @@
-<h1>Which order would you like to delete?</h1>
-
-<ul> Your Orders:
-<%@user.orders.each do |order| %>
-  <li><a href="/orders/<%=order.id%>">Order #<%=order.id%></a></li>
-<%end%>
-</ul>
+<h2>Are you sure you want to delete this order?</h2>
