--- a/app/views/orders/edit_order.erb
+++ b/app/views/orders/edit_order.erb
@@ -2,18 +2,14 @@
 
 <form method="post" action="/order">
   <ul><label>What drink type would you like?</label>
-        <li><input type="checkbox" id="latte" name="latte" value="Latte"/> Latte</li>
-        <li><input type="checkbox" id="cappuccino" name="cappuccino" value="Cappuccino"/> Cappuccino</li>
-        <li><input type="checkbox" id="hot coffee" name="hot coffee" value="Hot Coffee"/> Hot Coffee</li>
-        <li><input type="checkbox" id="iced coffee" name="iced coffee" value="Iced Coffee"/> Iced Coffee</li>
-        <li><input type="checkbox" id="frozen coffee" name="iced coffee" value="Frozen Coffee"/> Frozen Coffee</li>
+        <%@drinks.each do |drink|%>
+          <li><input type="checkbox" name="drinks[]" value="<%= drink.id %>"/> <%= drink.drink_type%></li>
+        <%end %>
         <br>
-  </ul>
-        <p>Additional instructions for your drink? (flavor, foam, toppings)? <input type="text" id="mods" name="mods" value="mods"/></p>
         <p>Would you like to favorite this order? </p>
-        <label for="yes">Yes </label><input type="radio" id="yes" name="yes" value="yes"> &nbsp; <label for="no">No </label><input type="radio" id="no" name="no" value="no">
+        <label for="yes">Yes </label><input type="radio" id="yes" name="favorite" value="true"> &nbsp; <label for="no">No </label><input type="radio" id="no" name="favorite" value="false">
         <br>
         <br>
-        <input type="submit" id="submit" name="submit" value="Update my Order!"/>
-
+        <input type="submit" id="submit" name="submit" value="Place my Order!"/>
+  </ul>
 </form>
