--- a/app/views/orders/show_order.erb
+++ b/app/views/orders/show_order.erb
@@ -1,8 +1,10 @@
 <h1>Order #<%=@order.id%></h1>
-
-<%@current_order.each do |orderdrink|%>
-  <%this_drink = Drink.find_by_id(orderdrink.drink_id)%>
+<br>
+<ul><%@current_order.each do |orderdrink|%>
+  <li><%this_drink = Drink.find_by_id(orderdrink.drink_id)%></li>
   <%=this_drink.drink_type%>
-
-
-<%end%>
+<%end%></ul>
+<br>
+<a href=/orders/edit_order>Edit this order?</a>
+<br>
+<a href=/orders/delete_order>Delete this order?</a>
