--- a/app/views/orders/show_order.erb
+++ b/app/views/orders/show_order.erb
@@ -9,6 +9,6 @@
   <%=this_drink.drink_type%>
 <%end%></ul>
 <br>
-<a href="/orders/??????/edit" >Edit this order?</a>
+<a href="/orders/<%=@order.id%>/edit" >Edit this order?</a>
 <br>
 <a href="/orders/@order.id/delete">Delete this order?</a>
