--- a/app/views/orders/show_order.erb
+++ b/app/views/orders/show_order.erb
@@ -11,4 +11,4 @@
 <br>
 <a href="/orders/<%=@order.id%>/edit" >Edit this order?</a>
 <br>
-<a href="/orders/@order.id/delete">Delete this order?</a>
+<a href="/orders/<%=@order.id%>/delete">Delete this order?</a>
