--- a/app/views/orders/show_order.erb
+++ b/app/views/orders/show_order.erb
@@ -13,3 +13,5 @@
 <a href="/orders/<%=@order.id%>/edit" >Edit this order?</a>
 <br>
 <a href="/orders/<%=@order.id%>/delete">Delete this order?</a>
+<br>
+<a href="/users/homepage">Return to my homepage</a>
