--- a/app/views/users/homepage.erb
+++ b/app/views/users/homepage.erb
@@ -18,5 +18,6 @@
 <br>
 <ul>
   <li><a href="/orders/new_order">Start a new Order</a></li>
+  <li><a href="/users/<%=@user.id%>/edit_account">Edit my Account</a></li>
   <li><a href="/users/logout">Log Out</a></li>
 </ul>
