--- a/app/views/users/homepage.erb
+++ b/app/views/users/homepage.erb
@@ -19,5 +19,6 @@
 <ul>
   <li><a href="/orders/new_order">Start a new Order</a></li>
   <li><a href="/users/<%=@user.id%>/edit_account">Edit my Account</a></li>
+  <li><a href="/users/<%=@user.id%>/terminate_account">Terminate my Account</a></li>
   <li><a href="/users/logout">Log Out</a></li>
 </ul>
